--- a/.github/workflows/cloudbuild.yml
+++ b/.github/workflows/cloudbuild.yml
@@ -1,25 +1,25 @@
 steps:
-  # Step 2: Set up Python 3.8
-  - name: "python:3.8"
-    entrypoint: "bash"
-    args:
-      - "-c"
-      - |
-        apt-get update && apt-get install -y python3.8
-        ln -s /usr/bin/python3.8 /usr/bin/python
-        python --version
+  # # Step 2: Set up Python 3.8
+  # - name: "python:3.8"
+  #   entrypoint: "bash"
+  #   args:
+  #     - "-c"
+  #     - |
+  #       apt-get update && apt-get install -y python3.8
+  #       ln -s /usr/bin/python3.8 /usr/bin/python
+  #       python --version
 
   # Step 3: Install dependencies
-  - name: "python:3.8"
+  - name: "Install"
     entrypoint: "make"
-    args: ["install"]
+    args: ["install-gcp"]
 
   # Step 4: Lint
-  - name: "python:3.8"
+  - name: "Linting"
     entrypoint: "make"
     args: ["lint"]
 
   # Step 5: Test
-  - name: "python:3.8"
+  - name: "Testing"
     entrypoint: "make"
     args: ["test"]
